--- a/landing 1/css/main.css
+++ b/landing 1/css/main.css
@@ -61,7 +61,7 @@ div, p, a, img, form, button {
     display: block;
     width: 100%;
     height: 100vh;
-    background:  url('../img/desc-bg.jpg') center no-repeat;
+    background:  url('/img/desc-bg.jpg') center no-repeat;
     background-size: cover;
     position: relative;
 }
@@ -573,7 +573,7 @@ div, p, a, img, form, button {
     flex-direction: column;
     text-align: center;
     padding-top: 1rem;
-    background: url('../img/prices-bg.png') no-repeat center top;
+    background: url('/img/prices-bg.png') no-repeat center top;
     background-size: cover;
     color: #fff;
     height: 215px;
@@ -604,7 +604,7 @@ div, p, a, img, form, button {
     left: -1.19rem;
     width: 20px;
     height: 20px;
-    background: url('../img/dlr.png') no-repeat center top;
+    background: url('/img/dlr.png') no-repeat center top;
 }
 
 .offer-container {
@@ -852,7 +852,7 @@ div, p, a, img, form, button {
     left: -2rem;
     width: 100%;
     height: 100%;
-    background: url('../img/cldr.png') no-repeat;
+    background: url('/img/cldr.png') no-repeat;
 }
 
 .dt-dev-2::before {
@@ -862,7 +862,7 @@ div, p, a, img, form, button {
     left: -2rem;
     width: 100%;
     height: 100%;
-    background: url('../img/ppr.png') no-repeat;
+    background: url('/img/ppr.png') no-repeat;
 }
 
 .seo-2 {
@@ -901,7 +901,7 @@ div, p, a, img, form, button {
 .contacts {
     width: 100%;
     height: 1255px;
-    background: url('../img/contacts.jpg') no-repeat center;
+    background: url('/img/contacts.jpg') no-repeat center;
     background-size: cover;
     position: relative;
     color: #fff;
@@ -982,7 +982,7 @@ div, p, a, img, form, button {
     height: 100%;
     top: 0;
     left: 0;
-    background: url('../img/loc.png') no-repeat center;
+    background: url('/img/loc.png') no-repeat center;
 }
 
 .img-mail-container-2 {
@@ -996,7 +996,7 @@ div, p, a, img, form, button {
     height: 100%;
     top: 0;
     left: 0;
-    background: url('../img/phn.png') no-repeat center;
+    background: url('/img/phn.png') no-repeat center;
 }
 
 .img-mail-container-3 {
@@ -1010,7 +1010,7 @@ div, p, a, img, form, button {
     height: 100%;
     top: 0;
     left: 0;
-    background: url('../img/mail.png') no-repeat center;
+    background: url('/img/mail.png') no-repeat center;
 }
 
 .inner-mail-container p {
